--- a/packages/json-loader/package.json
+++ b/packages/json-loader/package.json
@@ -49,6 +49,7 @@
     }
   },
   "dependencies": {
+    "@weapp-toolkit/weapp-types": "^1.0.0",
     "loader-utils": "^2.0.0"
   },
   "devDependencies": {
