--- a/packages/json-loader/tsconfig.json
+++ b/packages/json-loader/tsconfig.json
@@ -1,21 +1,9 @@
 {
-  "compileOnSave": true,
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "module": "commonjs",
-    "allowJs": false,
-    "target": "ES2015",
-    "esModuleInterop": true,
-    "alwaysStrict": true,
-    "noUnusedLocals": false,
-    "pretty": true,
-    "sourceMap": false,
-    "strict": true,
-    "moduleResolution": "node",
     "baseUrl": ".",
-    "skipLibCheck": true,
-    "declaration": true,
-    "outDir": "./lib",
+    "rootDir": "src",
+    "outDir": "lib",
   },
-  "references": [{ "path": "../../", "prepend": true }],
   "include": ["./src/**/*"],
 }
