--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "sourceMap": false,
     "strict": true,
     "moduleResolution": "node",
+    "incremental": true, // incremental 打开后编译后会生成 tsconfig.tsbuildinfo，下次编译会去做比对，有不同的地方再进行编译，之前编译过的内容不在编译，只编译新增的内容
     "skipLibCheck": true,
     "declaration": true,
     "composite": true
