--- a/packages/weapp-webpack-plugin/package.json
+++ b/packages/weapp-webpack-plugin/package.json
@@ -48,6 +48,16 @@
       "pre-commit": "npm run test"
     }
   },
+  "dependencies": {
+    "@weapp-toolkit/weapp-types": "^1.0.0",
+    "enhanced-resolve": "^5.8.2",
+    "fs-extra": "^10.0.0",
+    "glob-to-regexp": "^0.4.1",
+    "lodash": "^4.17.21"
+  },
   "devDependencies": {
+    "@types/fs-extra": "^9.0.12",
+    "@types/glob-to-regexp": "^0.4.1",
+    "@types/lodash": "^4.14.171"
   }
 }
