--- a/packages/weapp-webpack-plugin/tsconfig.json
+++ b/packages/weapp-webpack-plugin/tsconfig.json
@@ -1,20 +1,9 @@
 {
-  "compileOnSave": true,
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "module": "commonjs",
-    "allowJs": false,
-    "target": "ES2015",
-    "esModuleInterop": true,
-    "alwaysStrict": true,
-    "noUnusedLocals": false,
-    "pretty": true,
-    "sourceMap": false,
-    "strict": true,
-    "moduleResolution": "node",
-    "baseUrl": ".",
-    "skipLibCheck": true,
-    "declaration": true,
-    "outDir": "./lib",
+    "baseUrl": "./",
+    "rootDir": "src",
+    "outDir": "./",
   },
-  "include": ["./src"],
+  "include": ["./src/**/*"],
 }
