feat: add rollup

--- a/packages/weapp-types/tsconfig.json
+++ b/packages/weapp-types/tsconfig.json
@@ -1,18 +1,8 @@
 {
-  "compileOnSave": true,
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "module": "commonjs",
-    "allowJs": false,
-    "target": "ES2015",
-    "esModuleInterop": true,
-    "alwaysStrict": true,
-    "noUnusedLocals": false,
-    "pretty": true,
-    "sourceMap": false,
-    "strict": true,
-    "moduleResolution": "node",
     "baseUrl": ".",
-    "skipLibCheck": true,
-    "declaration": true,
+    "rootDir": "src",
+    "outDir": "lib",
   },
 }
