--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,17 +3,19 @@
   // 悬停以查看现有属性的描述。
   // 欲了解更多信息，请访问: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
-  "configurations": [
-    {
-      "type": "node",
-      "request": "launch",
-      "name": "weapp-webpack-plugin",
-      "preLaunchTask": "wwp: dev",
-      "cwd": "${workspaceFolder}/packages/weapp-webpack-plugin",
-      "program": "${file}",
-      "outFiles": [
-        "${workspaceFolder}/**/*.js"
-      ]
-    }
-  ]
+  "configurations": [{
+    "name": "weapp-webpack-plugin",
+    "request": "launch",
+    "runtimeArgs": [
+      "run-script",
+      "debug"
+    ],
+    "runtimeExecutable": "npm",
+    "skipFiles": [
+      "<node_internals>/**"
+    ],
+    "cwd": "${workspaceFolder}/packages/weapp-webpack-plugin",
+    "console": "integratedTerminal",
+    "type": "pwa-node"
+  }]
 }
