--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "compileOnSave": true,
   "compilerOptions": {
-    "module": "commonjs",
+    "module": "ESNEXT",
     "allowJs": false,
-    "target": "ES2015",
+    "target": "ES5",
     "esModuleInterop": true,
     "alwaysStrict": true,
     "noUnusedLocals": false,
@@ -16,5 +16,9 @@
     "declaration": true,
     "composite": true
   },
-  "exclude": ["**/node_modules/**/*", "**/lib/**/*"],
+  "exclude": [
+    "lib/*",
+    "es/*",
+    "node_modules/*"
+  ]
 }
