--- a/packages/weapp-webpack-plugin/package.json
+++ b/packages/weapp-webpack-plugin/package.json
@@ -7,8 +7,9 @@
   "scripts": {
     "test": "jest",
     "dev": "rollup -c -w",
-    "dev:test": "nodemon --config ./nodemon.json --exec 'ts-node -P ./test/tsconfig.json --cwd-mode --files' ./test/index.test.ts",
     "debug": "ts-node -P ./test/tsconfig.json --cwd-mode --files ./test/index.test.ts",
+    "debug:dev": "nodemon -w ./test/webpack.config.ts --exec 'TS_NODE_PROJECT=\"./test/tsconfig.json\" webpack -c ./test/webpack.config.ts'",
+    "debug:dev-pure": "nodemon --config ./nodemon.json --exec 'ts-node -P ./test/tsconfig.json --cwd-mode --files' ./test/index.test.ts",
     "build": "rimraf lib es && rollup -c"
   },
   "repository": {
@@ -63,6 +64,8 @@
     "@types/glob-to-regexp": "^0.4.1",
     "@types/lodash": "^4.14.171",
     "rimraf": "^3.0.2",
-    "rollup": "^2.56.2"
+    "rollup": "^2.56.2",
+    "webpack": "^5.51.1",
+    "webpack-cli": "^4.8.0"
   }
 }
