--- a/.eslintrc
+++ b/.eslintrc
@@ -32,6 +32,7 @@
     "no-multiple-empty-lines": 2,
     "padded-blocks": ["error", "never"],
     "quotes": [2, "single"],
-    "spaced-comment": 2
+    "spaced-comment": 2,
+    "semi": "error"
   }
 }
