--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "rollup": "^2.56.2",
     "rollup-plugin-typescript2": "^0.30.0",
     "ts-node": "^10.1.0",
-    "typescript": "^4.3.5",
-    "webpack": "^5.50.0"
+    "typescript": "^4.3.5"
   }
 }
