--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compileOnSave": true,
   "compilerOptions": {
     "module": "ESNEXT",
-    "allowJs": false,
+    "allowJs": true,
     "target": "ES5",
     "esModuleInterop": true,
     "alwaysStrict": true,
