--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,7 +4,7 @@
   // 欲了解更多信息，请访问: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [{
-    "name": "weapp-webpack-plugin",
+    "name": "weapp-plugin",
     "request": "launch",
     "runtimeArgs": [
       "run-script",
@@ -14,7 +14,7 @@
     "skipFiles": [
       "<node_internals>/**"
     ],
-    "cwd": "${workspaceFolder}/packages/weapp-webpack-plugin",
+    "cwd": "${workspaceFolder}/packages/weapp-plugin",
     "console": "integratedTerminal",
     "type": "pwa-node"
   }]
