--- a/packages/json-loader/package.json
+++ b/packages/json-loader/package.json
@@ -51,7 +51,9 @@
   "dependencies": {
     "@weapp-toolkit/core": "^1.0.0",
     "@weapp-toolkit/weapp-types": "^1.0.0",
-    "loader-utils": "^2.0.0"
+    "json-schema": "^0.3.0",
+    "loader-utils": "^2.0.0",
+    "schema-utils": "^3.1.1"
   },
   "devDependencies": {
     "@types/loader-runner": "^2.2.4",
