--- a/packages/assets-loader/package.json
+++ b/packages/assets-loader/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "jest",
     "dev": "tsc -w",
-    "dev:test": "nodemon --config ./nodemon.json --exec 'ts-node -P ./test/tsconfig.json --cwd-mode --files' ./test/functional.test.ts",
+    "debug": "nodemon --config ./nodemon.json --exec 'TS_NODE_PROJECT=\"./test/tsconfig.json\" webpack -c ./test/webpack.config.ts'",
+    "debug:lite": "nodemon --config ./nodemon.json --exec 'ts-node -P ./test/tsconfig.json --cwd-mode --files' ./test/functional.test.ts",
     "build": "rimraf lib && tsc"
   },
   "repository": {
@@ -51,11 +52,13 @@
   "dependencies": {
     "@weapp-toolkit/core": "^1.0.0",
     "@weapp-toolkit/weapp-types": "^1.0.0",
+    "globby": "11",
     "loader-utils": "^2.0.0"
   },
   "devDependencies": {
     "@types/loader-runner": "^2.2.4",
     "@types/loader-utils": "^2.0.3",
-    "loader-runner": "^4.2.0"
+    "loader-runner": "^4.2.0",
+    "webpack": "^5.51.1"
   }
 }
