fix: cdn-loader文件写入&schema调整

--- a/packages/cdn-loader/tsconfig.json
+++ b/packages/cdn-loader/tsconfig.json
@@ -4,6 +4,7 @@
     "baseUrl": ".",
     "rootDir": "src",
     "outDir": "lib",
+    "resolveJsonModule": true
   },
-  "include": ["./src/**/*"],
+  "include": ["./src/**/*", "./src/options.json"],
 }
