feat(assets-loader): 将普通引入转换为模块引入

--- a/.eslintrc
+++ b/.eslintrc
@@ -33,6 +33,7 @@
     "padded-blocks": ["error", "never"],
     "quotes": [2, "single"],
     "spaced-comment": 2,
+    "object-shorthand": 2,
     "semi": "error"
   }
 }
