--- a/packages/assets-loader/package.json
+++ b/packages/assets-loader/package.json
@@ -50,14 +50,17 @@
     }
   },
   "dependencies": {
+    "@babel/core": "^7.15.0",
     "@weapp-toolkit/core": "^1.0.0",
     "@weapp-toolkit/weapp-types": "^1.0.0",
     "globby": "11",
     "loader-utils": "^2.0.0"
   },
   "devDependencies": {
+    "@types/babel__core": "^7.1.15",
     "@types/loader-runner": "^2.2.4",
     "@types/loader-utils": "^2.0.3",
+    "babel-loader": "^8.2.2",
     "css-loader": "5",
     "extract-loader": "^5.1.0",
     "file-loader": "^6.2.0",
