--- a/lerna.json
+++ b/lerna.json
@@ -2,6 +2,11 @@
   "packages": [
     "packages/*"
   ],
+  "command": {
+    "bootstrap": {
+      "hoist": true
+    }
+  },
   "version": "independent",
   "npmClient": "yarn",
   "useWorkspaces": true
