--- a/packages/weapp-plugin/tsconfig.json
+++ b/packages/weapp-plugin/tsconfig.json
@@ -2,8 +2,7 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "baseUrl": "./",
-    "rootDir": "src",
-    "outDir": "./",
+    "outDir": "./"
   },
   "include": ["./src/**/*"],
 }
