--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,7 @@
     "incremental": true, // incremental 打开后编译后会生成 tsconfig.tsbuildinfo，下次编译会去做比对，有不同的地方再进行编译，之前编译过的内容不在编译，只编译新增的内容
     "skipLibCheck": true,
     "declaration": true,
-    "composite": true,
-    "resolveJsonModule": true
+    "composite": true
   },
   "typeAcquisition": {
     "enable": true
