chore: 整理构建配置

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,6 +5,7 @@
       "dependsOn": [
         "core: dev",
         "assets-loader: dev",
+        "json-loader: dev",
         "weapp-plugin: dev",
         "weapp-plugin: debug"
       ],
