chore(lint): update

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,6 @@
 {
   "extends": [
+    "eslint-config-imweb",
     "plugin:@typescript-eslint/recommended",
     "prettier",
     "plugin:prettier/recommended"
@@ -18,7 +19,7 @@
     "import/prefer-default-export": 0,
     "import/extensions": 0,
     "import/no-dynamic-require": 0,
-    "prettier/prettier": 0,
+    "prettier/prettier": 2,
     "camelcase": 0,
     "operator-linebreak": 0,
     "prefer-promise-reject-errors": 0,
