--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,9 +20,9 @@
     "enable": true
   },
   "exclude": [
-    "lib/*",
-    "es/*",
-    "dist/*",
-    "node_modules/*"
+    "**/lib/*",
+    "**/es/*",
+    "**/dist/*",
+    "**/node_modules/*"
   ]
 }
