--- a/.prettierrc
+++ b/.prettierrc
@@ -4,5 +4,6 @@
   "jsxBracketSameLine": false,
   "trailingComma": "all",
   "printWidth": 120,
-  "semi": true
+  "semi": true,
+  "endOfLine": "lf"
 }
