--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -52,6 +52,7 @@
   "dependencies": {
     "chalk": "^4.1.2",
     "commander": "^8.1.0",
+    "configstore": "^6.0.0",
     "del": "^6.0.0",
     "fs-extra": "^10.0.0",
     "globby": "11",
