feat(cli): init

--- a/.eslintrc
+++ b/.eslintrc
@@ -27,6 +27,7 @@
     "@typescript-eslint/no-non-null-assertion": 0,
     "@typescript-eslint/no-unused-vars": 1,
     "@typescript-eslint/triple-slash-reference": 0,
+    "@typescript-eslint/ban-ts-comment": 1,
     "import/prefer-default-export": 0,
     "import/extensions": 0,
     "import/no-dynamic-require": 0,
