feat(weapp-plugin): 增加 dependencyTree 的依赖 Map

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compileOnSave": true,
   "compilerOptions": {
+    "lib": ["ESNext", "DOM"],
     "module": "ESNEXT",
     "allowJs": true,
     "target": "ES5",
