--- a/package.json
+++ b/package.json
@@ -5,13 +5,8 @@
     "packages/*"
   ],
   "scripts": {
+    "postinstall": "husky install",
     "lint": "eslint --fix packages/**/src/**/*.ts"
-  },
-  "husky": {
-    "hooks": {
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
-      "pre-commit": "lint-staged"
-    }
   },
   "lint-staged": {
     "*.{json,md}": [
@@ -50,7 +45,7 @@
     "eslint-config-imweb": "0.2.19",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
-    "husky": "4",
+    "husky": "^7.0.2",
     "lerna": "^4.0.0",
     "lint-staged": "^11.1.2",
     "prettier": "^2.3.2",
