--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   ],
   "scripts": {
     "postinstall": "husky install",
+    "precommit": "lint-staged",
     "lint": "eslint --fix packages/**/src/**/*.ts"
   },
   "lint-staged": {
