--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   ],
   "scripts": {
     "postinstall": "husky install",
-    "precommit": "lint-staged",
+    "pre-commit": "lint-staged",
     "lint": "eslint --fix packages/**/src/**/*.ts"
   },
   "lint-staged": {
