chore: lint fix

--- a/.eslintrc
+++ b/.eslintrc
@@ -28,6 +28,7 @@
     "@typescript-eslint/no-unused-vars": 1,
     "@typescript-eslint/triple-slash-reference": 0,
     "@typescript-eslint/ban-ts-comment": 1,
+    "@typescript-eslint/no-shadow": 2,
     "import/prefer-default-export": 0,
     "import/extensions": 0,
     "import/no-dynamic-require": 0,
@@ -35,9 +36,11 @@
     "camelcase": 0,
     "operator-linebreak": 0,
     "prefer-promise-reject-errors": 0,
+    "no-await-in-loop": 1,
     "no-use-before-define": 0,
     "no-unused-vars": 0,
     "no-console": 0,
+    "no-shadow": 0,
     "no-sync": 0,
     "no-continue": 0,
     "global-require": 0,
