--- a/.eslintrc
+++ b/.eslintrc
@@ -29,13 +29,16 @@
     "@typescript-eslint/triple-slash-reference": 0,
     "@typescript-eslint/ban-ts-comment": 1,
     "@typescript-eslint/no-shadow": 2,
+    "@typescript-eslint/explicit-module-boundary-types": 0,
     "import/prefer-default-export": 0,
     "import/extensions": 0,
     "import/no-dynamic-require": 0,
     "prettier/prettier": 2,
     "camelcase": 0,
     "operator-linebreak": 0,
+    "guard-for-in": 0,
     "prefer-promise-reject-errors": 0,
+    "no-restricted-syntax": 0,
     "no-await-in-loop": 1,
     "no-use-before-define": 0,
     "no-unused-vars": 0,
