--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -27,8 +27,10 @@
   "bugs": {
     "url": "https://github.com/weapp-toolkit/weapp-webpack-toolkit/issues"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
+    "less": "^4.1.1",
+    "less-loader": "^10.0.1",
+    "webpack": "^5.52.1"
   }
 }
