feat(weapp-plugin): 支持跨分包动态引入图片、更新 json 组件引用

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,11 +1,13 @@
 {
   "version": "2.0.0",
-  "tasks": [{
+  "tasks": [
+    {
       "label": "weapp-plugin: watch",
       "dependsOn": [
         "core: dev",
         "assets-loader: dev",
         "json-loader: dev",
+        "cdn-loader: dev",
         "weapp-plugin: dev",
         "weapp-plugin: debug"
       ],
