--- a/package.json
+++ b/package.json
@@ -1,9 +1,16 @@
 {
   "name": "root",
   "private": true,
-  "workspaces": [
-    "packages/*"
-  ],
+  "workspaces": {
+    "packages": [
+      "packages/*"
+    ],
+    "nohoist": [
+      "**/@babel",
+      "**/@babel/**",
+      "**/*babel*"
+    ]
+  },
   "scripts": {
     "postinstall": "husky install",
     "pre-commit": "lint-staged",
@@ -45,9 +52,12 @@
     "eslint": "^7.31.0",
     "eslint-config-imweb": "0.2.19",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-prettier": "^3.4.0",
     "husky": "^7.0.2",
     "lerna": "^4.0.0",
+    "less": "^4.1.1",
+    "less-loader": "^10.0.1",
     "lint-staged": "^11.1.2",
     "prettier": "^2.3.2",
     "rimraf": "^3.0.2",
