--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -27,10 +27,11 @@
   "bugs": {
     "url": "https://github.com/weapp-toolkit/weapp-webpack-toolkit/issues"
   },
-  "dependencies": {},
+  "dependencies": {
+    "enhanced-resolve": "^5.8.3",
+    "lodash": "^4.17.21"
+  },
   "devDependencies": {
-    "less": "^4.1.1",
-    "less-loader": "^10.0.1",
     "webpack": "^5.52.1"
   }
 }
