chore: add pnpm

--- a/package.json
+++ b/package.json
@@ -33,37 +33,51 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.15.0",
+    "@babel/core": "^7.15.5",
     "@babel/plugin-transform-runtime": "^7.15.0",
-    "@babel/preset-env": "^7.15.0",
+    "@babel/preset-env": "^7.15.6",
     "@babel/preset-typescript": "^7.15.0",
     "@commitlint/cli": "^13.1.0",
     "@commitlint/config-conventional": "^13.1.0",
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^20.0.0",
     "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^13.0.4",
-    "@types/json-schema": "^7.0.8",
-    "@typescript-eslint/eslint-plugin": "^4.28.4",
-    "@typescript-eslint/parser": "^4.28.4",
+    "@rollup/plugin-node-resolve": "^13.0.5",
+    "@types/babel__core": "^7.1.16",
+    "@types/fs-extra": "^9.0.13",
+    "@types/glob-to-regexp": "^0.4.1",
+    "@types/json-schema": "^7.0.9",
+    "@types/loader-runner": "^2.2.4",
+    "@types/loader-utils": "^2.0.3",
+    "@types/lodash": "^4.14.171",
+    "@types/tapable": "^2.2.2",
+    "@typescript-eslint/eslint-plugin": "^4.31.2",
+    "@typescript-eslint/parser": "^4.31.2",
     "babel-loader": "^8.2.2",
-    "clean-webpack-plugin": "^4.0.0-alpha.0",
-    "core-js": "^3.16.1",
-    "eslint": "^7.31.0",
+    "clean-webpack-plugin": "^4.0.0",
+    "core-js": "^3.18.1",
+    "css-loader": "5",
+    "eslint": "^7.32.0",
     "eslint-config-imweb": "0.2.19",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-babel": "^5.3.1",
-    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-prettier": "^3.4.1",
+    "extract-loader": "^5.1.0",
+    "file-loader": "^6.2.0",
     "husky": "^7.0.2",
+    "json-schema": "^0.3.0",
     "lerna": "^4.0.0",
     "less": "^4.1.1",
     "less-loader": "^10.0.1",
     "lint-staged": "^11.1.2",
-    "prettier": "^2.3.2",
+    "loader-runner": "^4.2.0",
+    "prettier": "^2.4.1",
     "rimraf": "^3.0.2",
-    "rollup": "^2.56.2",
+    "rollup": "^2.57.0",
     "rollup-plugin-typescript2": "^0.30.0",
-    "ts-node": "^10.1.0",
-    "typescript": "^4.3.5"
+    "ts-node": "^10.2.1",
+    "typescript": "^4.4.3",
+    "webpack": "^5.54.0",
+    "webpack-cli": "^4.8.0"
   }
 }
