--- a/packages/assets-loader/package.json
+++ b/packages/assets-loader/package.json
@@ -46,24 +46,13 @@
   ],
   "dependencies": {
     "@babel/core": "^7.15.5",
+    "@babel/generator": "^7.15.4",
+    "@babel/parser": "^7.15.7",
     "@babel/preset-env": "^7.15.6",
+    "@babel/traverse": "^7.15.4",
     "@weapp-toolkit/core": "^1.0.0",
     "@weapp-toolkit/weapp-types": "^1.0.0",
     "globby": "11",
-    "loader-utils": "^2.0.0",
     "tapable": "^2.2.0"
-  },
-  "devDependencies": {
-    "@types/babel__core": "^7.1.16",
-    "@types/loader-runner": "^2.2.4",
-    "@types/loader-utils": "^2.0.3",
-    "@types/shortid": "^0.0.29",
-    "@types/tapable": "^2.2.2",
-    "css-loader": "5",
-    "extract-loader": "^5.1.0",
-    "file-loader": "^6.2.0",
-    "html-loader": "^2.1.2",
-    "loader-runner": "^4.2.0",
-    "webpack": "^5.51.1"
   }
 }
