--- a/package.json
+++ b/package.json
@@ -54,11 +54,11 @@
     "@typescript-eslint/eslint-plugin": "^4.31.2",
     "@typescript-eslint/parser": "^4.31.2",
     "babel-loader": "^8.2.2",
-    "clean-webpack-plugin": "^4.0.0",
     "core-js": "^3.18.1",
     "css-loader": "5",
     "eslint": "^7.32.0",
     "eslint-config-imweb": "0.2.19",
+    "clean-webpack-plugin": "^4.0.0-alpha.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-prettier": "^3.4.1",
