--- a/packages/weapp-plugin/tsconfig.json
+++ b/packages/weapp-plugin/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "baseUrl": "./",
     "rootDir": "src",
-    "outDir": "./"
+    "outDir": "./lib"
   },
-  "include": ["./src/**/*"],
+  "include": ["./src/**/*"]
 }
