feat(assets-loader): 支持过滤注释

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -44,7 +44,7 @@
     },
     {
       "type": "npm",
-      "script": "debug:lite",
+      "script": "debug",
       "path": "packages/assets-loader/",
       "problemMatcher": [],
       "label": "assets-loader: debug",
