--- a/package.json
+++ b/package.json
@@ -57,6 +57,14 @@
     "less-loader": "^10.0.1",
     "lint-staged": "^11.1.2",
     "loader-runner": "^4.2.0",
+    "postcss": "^8.3.9",
+    "postcss-advanced-variables": "^3.0.1",
+    "postcss-css-variables": "^0.18.0",
+    "postcss-font-base64": "^1.0.5",
+    "postcss-import-resolver": "^2.0.0",
+    "postcss-loader": "^6.1.1",
+    "postcss-nested": "^5.0.6",
+    "postcss-partial-import": "^4.1.0",
     "prettier": "^2.4.1",
     "rimraf": "^3.0.2",
     "ts-node": "^10.2.1",
