--- a/packages/tools/tsconfig.json
+++ b/packages/tools/tsconfig.json
@@ -5,5 +5,5 @@
     "rootDir": "src",
     "outDir": "lib"
   },
-  "include": ["./src/**/*", "index.ts", "index.ts"]
+  "include": ["./src/**/*"]
 }
