--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -50,6 +50,7 @@
   },
   "homepage": "https://github.com/weapp-toolkit/weapp-webpack-toolkit.git#readme",
   "dependencies": {
+    "@weapp-toolkit/core": "workspace:^1.0.0",
     "chalk": "^4.1.2",
     "commander": "^8.1.0",
     "configstore": "^6.0.0",
