--- a/packages/tools/package.json
+++ b/packages/tools/package.json
@@ -28,6 +28,7 @@
     "url": "https://github.com/weapp-toolkit/weapp-webpack-toolkit/issues"
   },
   "dependencies": {
+    "chalk": "^4.1.2",
     "enhanced-resolve": "^5.8.3",
     "lodash": "^4.17.21"
   }
