--- a/package.json
+++ b/package.json
@@ -67,12 +67,20 @@
     "loader-runner": "^4.2.0",
     "postcss": "^8.3.9",
     "postcss-advanced-variables": "^3.0.1",
+    "postcss-atroot": "^0.2.3",
+    "postcss-color-function": "^4.1.0",
     "postcss-css-variables": "^0.18.0",
+    "postcss-extend": "^1.0.5",
+    "postcss-extend-rule": "^3.0.0",
     "postcss-font-base64": "^1.0.5",
+    "postcss-functions": "^4.0.2",
     "postcss-import-resolver": "^2.0.0",
     "postcss-loader": "^6.1.1",
     "postcss-nested": "^5.0.6",
     "postcss-partial-import": "^4.1.0",
+    "postcss-preset-env": "^6.7.0",
+    "postcss-scss": "^4.0.1",
+    "postcss-url": "^10.1.3",
     "prettier": "^2.4.1",
     "rimraf": "^3.0.2",
     "ts-node": "^10.2.1",
