fix(assets-loader): 修复动态依赖存在子依赖时依赖图构建顺序错误

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@commitlint/cli": "^13.1.0",
     "@commitlint/config-conventional": "^13.1.0",
     "@commitlint/config-lerna-scopes": "^13.2.0",
+    "@soda/friendly-errors-webpack-plugin": "^1.8.0",
     "@types/babel__core": "^7.1.16",
     "@types/fs-extra": "^9.0.13",
     "@types/glob-to-regexp": "^0.4.1",
@@ -73,9 +74,11 @@
     "postcss-extend": "^1.0.5",
     "postcss-extend-rule": "^3.0.0",
     "postcss-font-base64": "^1.0.5",
+    "postcss-for": "^2.1.1",
     "postcss-functions": "^4.0.2",
     "postcss-import-resolver": "^2.0.0",
     "postcss-loader": "^6.1.1",
+    "postcss-map-get": "^0.3.0",
     "postcss-nested": "^5.0.6",
     "postcss-partial-import": "^4.1.0",
     "postcss-preset-env": "^6.7.0",
