--- a/packages/assets-loader/package.json
+++ b/packages/assets-loader/package.json
@@ -51,6 +51,7 @@
     "@weapp-toolkit/core": "workspace:^1.0.0",
     "@weapp-toolkit/tools": "^1.0.0",
     "@weapp-toolkit/weapp-types": "^1.0.0",
+    "chalk": "^4.1.2",
     "globby": "11",
     "lodash": "^4.17.21",
     "tapable": "^2.2.0"
