--- a/packages/weapp-plugin/package.json
+++ b/packages/weapp-plugin/package.json
@@ -58,10 +58,13 @@
   },
   "devDependencies": {
     "@types/copy-webpack-plugin": "^8.0.1",
+    "@types/webpack-bundle-analyzer": "^4.4.1",
     "@weapp-toolkit/assets-loader": "1.0.0",
     "@weapp-toolkit/cdn-loader": "1.0.0",
     "@weapp-toolkit/json-loader": "1.0.0",
+    "terser-webpack-plugin": "^5.3.0",
     "webpack": "^5.54.0",
+    "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.8.0"
   }
 }
